# singstatdata

./: CONTRIBUTING.rst  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: modules.rst  singstatdata.rst
singstatdata/: singstatdata.py  vignette.ipynb
tests/: test_singstatdata.py
