[tool.poetry]
name = "singstatdata"
version = "0.1.0"
description = "An API client for Singstat time series data"
authors = ["Daryl Kow <dk3154@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
