[tool.poetry]
name = "singstatdata"
version = "0.1.0"
description = "An API client for Singstat time series data"
authors = ["Daryl Kow <dk3154@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"
pandas = "^1.1.5"
IPython = "^7.19.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
sphinx = "^3.3.1"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
